--- a/styles/header.css
+++ b/styles/header.css
@@ -45,16 +45,13 @@
   height: 36px;
   padding-left: 10px;
   font-size: 16px;
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(204, 204, 204);
+  border: 1px solid rgb(204, 204, 204);
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
   width: 0;
 }
 
 .search-bar::placeholder {
-  font-family: Roboto, Arial;
   font-size: 16px;
 }
 
@@ -63,9 +60,7 @@
   height: 40px;
   width: 66px;
   background-color: rgb(247, 247, 247);
-  border-width: 1px;
-  border-style: solid;
-  border-color: rgb(204, 204, 204);
+  border-width: 1px solid rgb(204, 204, 204);
   margin-left: -1px;
   margin-right: 10px;
 }
@@ -87,14 +82,10 @@
 .upload-icon-container .tooltip,
 .youtube-apps-container .tooltip,
 .notifications-icon-container .tooltip {
-  font-family: Roboto, Arial;
   position: absolute;
   background-color: gray;
   color: white;
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding: 4px 8px;
   border-radius: 2px;
   font-size: 12px;
   bottom: -37px;
@@ -139,14 +130,8 @@
   flex-shrink: 0;
 }
 
-.upload-icon {
-  height: 24px;
-}
-
-.youtube-apps-icon {
-  height:24px;
-}
-
+.upload-icon,
+.youtube-apps-icon,
 .notifications-icon {
   height: 24px;
 }
